# fast-api-template

./: .env  .gitignore  README.md  docker-compose.yml  pyproject.toml
apps/: Dockerfile  config.py  database.py
migrations/: env.py
